Change contact button selector

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                             <span class="material-symbols-outlined">schedule</span>
                             <span id="my-time"></span>
                         </span>
-                        <a href="" class="flexbox-row aic mt-10 stat-container" id="contact-link">
+                        <a href="" class="flexbox-row aic mt-10 stat-container contact-me-button" id="contact-link">
                             <span class="material-symbols-outlined">send</span>
                             <span>Contact</span>
                         </a>
