--- a/utilities/object-tracking.html
+++ b/utilities/object-tracking.html
@@ -1,6 +1,42 @@
 <!DOCTYPE html>
 <html lang="en" class="dark-theme">
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TGM5F6WJNV"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-TGM5F6WJNV');
+    </script>
+    <meta name="language" content="en">
+    <meta name="author" content="Hrushikesh Vaidya | @hrushikeshrv on GitHub">
+    <meta name="theme-color" content="rgb(46, 48, 51)">
+    <meta name="description" content="Practice object tracking for FPS games">
+    <meta name="keywords" content="fps tracking, eye tracking, object tracking">
+    <meta name="robots" content="index, follow">
+
+    <meta property="og:title" content="Hrushikesh Vaidya">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://hrus.in/utilities/object-tracking">
+    <meta property="og:description" content="Practice object tracking for FPS games">
+    <link rel="icon" href="../images/favicon.png" type="image/x-icon">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;600;700&family=Poppins&family=JetBrains+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <style>
+        .material-symbols-outlined {
+            font-variation-settings:
+                    'FILL' 0,
+                    'wght' 400,
+                    'GRAD' 0,
+                    'opsz' 24;
+            color: var(--font-color);
+        }
+    </style>
     <meta charset="UTF-8">
     <title>FPS Object Tracking Training</title>
     <link rel="stylesheet" href="./css/base.css">
